# shoshi

./: dune-project  shoshi.opam  test.bib
lib/commandline/: cadd.ml  cedit.ml  cinit.ml  cmerge.ml  commandline.ml  dune
lib/libbibtex/: biblexer.mll  bibparser.mly  dune  entry.ml  error.ml
lib/libshoshi/: bibtex.ml  bibtexs.ml  config.ml  dune  error.ml  libshoshi.ml
lib/shoshi-bibtex/: bibBaseType.ml  bibEntry.ml  bibLexer.mll  bibParser.mly  bibParsing.ml  database.ml  dune  shoshiBibtex.ml
lib/util/: filesys.ml  position.ml  util.ml
